src/main/kubernetes/merlin-phase1-mockmessageproducer.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: mock-message-producer
  labels:
    name: mock-message-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mock-message-producer
  template:
    metadata:
      labels:
        name: mock-message-producer
    spec:
      containers:
        - name: test-app
          image: registry.local/mock-message-producer:latest
          imagePullPolicy: Never
