src/main/kubernetes/sos-endpoint.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: sos-endpoint
  labels:
    name: sos-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sos-endpoint
  template:
    metadata:
      labels:
        name: sos-endpoint
    spec:
      containers:
        - name: sos-endpoint
          image: registry.localdev.me/sos-endpoint:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: sos-ep-port
---
apiVersion: v1
kind: Service
metadata:
  name: sos-ep-svc
  labels:
    run: sos-ep-svc
spec:
  type: NodePort
  selector:
    name: sos-endpoint
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: sos-endpoint-ingress
spec:
  rules:
    - host: merlin.localdev.me
      http:
        paths:
          - backend:
              service:
                name: sos-ep-svc
                port:
                  number: 8080
            path: /sos
            pathType: Prefix
